@@ -1,3 +1,7 @@
+2008-03-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* automake.in (handle_man_pages): Reindent, for next patch.
+
 2008-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Use `install' with multiple files at once for some primaries.
